# mdcc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/mdcc/: SKILL.md
docs/: ARCHITECTURE.md  COMPILER_USAGE.md  DESIGN_PRINCIPLES.md  DIAGNOSTICS.md  FUTURE_FEATURES.md  SOURCE_FORMAT.md  SPEC.md  SPEC_TEMPLATE.md  TASKS.md
docs/features/: AGENT_FILE_SPEC.md  BLOCK_METADATA_SPEC.md  BUNDLE_SPEC.md  CACHE_SPEC.md  CROSS_REFERENCING_SPEC.md  MVP_SPEC.md  VALIDATE_COMMAND_SPEC.md
example/: README.md  apple_analysis.mdcc  example.md  example.mdcx
example/data/: market-data.json  region-targets.csv
src/mdcc/: cache.py  cli.py  compile.py  errors.py  models.py  parser.py  pdf.py  reader.py  references.py  validate.py  validator.py
src/mdcc/bundle/: __init__.py  builder.py  commands.py  datasets.py  inspect.py  outputs.py  render.py  sql.py  store.py  validate.py
src/mdcc/executor/: __init__.py  payload.py  prelude.py  result.py  runner.py
src/mdcc/renderers/: __init__.py  chart.py  document.py  table.py
src/mdcc/utils/: __init__.py  workspace.py
tests/: conftest.py  test_bundle.py  test_cache.py  test_cli.py  test_diagnostics.py  test_e2e.py  test_errors.py  test_executor.py  test_models.py  test_parser.py  test_pdf.py  test_reader.py  test_renderers.py  test_result_extraction.py  test_typed_result_validation.py  test_validator.py  test_workspace.py
